--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
-/.DS_Store
+.DS_Store
 /doi_fetch.egg-info
 /doi_fetch2.egg-info
 /example.bib
 /recover
 /requirements.txt
 /sample.json
-/textual_demo_2024-04-02T17_28_47_274553.svg
 /doi_fetch/persistence/*.json
-__pycache__/
+__pycache__
 *.pyc
